[build] Fix vulnerability in cookie <0.7.0
```

cookie  <0.7.0
cookie accepts cookie name, path, and domain with out of bounds characters - https://github.com/advisories/GHSA-pxg6-pf52-xh8x
fix available via `npm audit fix --force`
Will install express@2.5.11, which is a breaking change
node_modules/cookie
  express  >=3.0.0-alpha1
  Depends on vulnerable versions of cookie
  node_modules/express
```

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/package.json
+++ b/package.json
@@ -190,7 +190,8 @@
 		"xterm-addon-webgl": "^0.16.0"
 	},
 	"overrides": {
-		"tough-cookie": "^5.0.0"
+		"tough-cookie": "^5.0.0",
+		"cookie": "0.7.1"
 	},
 	"activationEvents": [
 		"onView:openshiftProjectExplorer",
