[build] Fix vulnerability in cross-spawn <7.0.5
See: https://github.com/advisories/GHSA-3xgq-45jj-v275

```
cross-spawn  <7.0.5
Severity: high
Regular Expression Denial of Service (ReDoS) in cross-spawn - https://github.com/advisories/GHSA-3xgq-45jj-v275
fix available via `npm audit fix --force`
Will install npm-run-all@2.1.0, which is a breaking change
node_modules/execa/node_modules/cross-spawn
node_modules/npm-run-all/node_modules/cross-spawn
  execa  0.5.0 - 2.0.5
  Depends on vulnerable versions of cross-spawn
  node_modules/execa
    clipboardy  <=2.3.0
    Depends on vulnerable versions of execa
    node_modules/clipboardy
  npm-run-all  >=2.1.1
  Depends on vulnerable versions of cross-spawn
  node_modules/npm-run-all
```

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
 	},
 	"overrides": {
 		"tough-cookie": "^5.0.0",
+		"cross-spawn": "^7.0.6",
 		"cookie": "^1.0.1"
 	},
 	"activationEvents": [
