--- a/package.json
+++ b/package.json
@@ -197,8 +197,9 @@
 	"overrides": {
 		"cookie": "^1.0.2",
 		"cross-spawn": "^7.0.6",
+		"globals": "^16.0.0",
 		"tough-cookie": "^5.1.2",
-		"globals": "^16.0.0"
+		"tar-fs": "^2.1.2"
 	},
 	"activationEvents": [
 		"onView:openshiftProjectExplorer",
