[build] Fix vulnerability in brace-expansion >=2.0.1 <=4.0.0
```
> npm audit report

brace-expansion  2.0.1 - 4.0.0
brace-expansion Regular Expression Denial of Service vulnerability - https://github.com/advisories/GHSA-v6h2-p8h4-qcjw
No fix available
node_modules/@kubernetes/client-node/node_modules/brace-expansion
node_modules/@typescript-eslint/typescript-estree/node_modules/brace-expansion
node_modules/dpdm/node_modules/brace-expansion
node_modules/glob/node_modules/brace-expansion
node_modules/mocha/node_modules/brace-expansion
node_modules/test-exclude/node_modules/brace-expansion
  minimatch  5.0.0 - 9.0.5 || >=10.0.1
  Depends on vulnerable versions of brace-expansion
  node_modules/@kubernetes/client-node/node_modules/minimatch
  node_modules/@typescript-eslint/typescript-estree/node_modules/minimatch
  node_modules/dpdm/node_modules/minimatch
  node_modules/glob/node_modules/minimatch
  node_modules/mocha/node_modules/minimatch
  node_modules/test-exclude/node_modules/minimatch
    @typescript-eslint/typescript-estree  >=6.16.0
    Depends on vulnerable versions of minimatch
    node_modules/@typescript-eslint/typescript-estree
      @typescript-eslint/parser  >=6.16.0
      Depends on vulnerable versions of @typescript-eslint/typescript-estree
      node_modules/@typescript-eslint/parser
        @typescript-eslint/eslint-plugin  >=6.16.0
        Depends on vulnerable versions of @typescript-eslint/parser
        Depends on vulnerable versions of @typescript-eslint/type-utils
        Depends on vulnerable versions of @typescript-eslint/utils
        node_modules/@typescript-eslint/eslint-plugin
          typescript-eslint  *
          Depends on vulnerable versions of @typescript-eslint/eslint-plugin
          Depends on vulnerable versions of @typescript-eslint/parser
          Depends on vulnerable versions of @typescript-eslint/utils
          node_modules/typescript-eslint
      @typescript-eslint/type-utils  >=6.16.0
      Depends on vulnerable versio

--- a/package.json
+++ b/package.json
@@ -198,7 +198,8 @@
 		"cross-spawn": "^7.0.6",
 		"globals": "^16.0.0",
 		"tough-cookie": "^5.1.2",
-		"tar-fs": "^2.1.2"
+		"tar-fs": "^2.1.2",
+		"brace-expansion": "^4.0.1"
 	},
 	"activationEvents": [
 		"onView:openshiftProjectExplorer",
